--- a/index.html
+++ b/index.html
@@ -42,50 +42,70 @@
 <!-- to just jump to parts of the page. What I put as First/Second/Third here would -->
 <!-- be sections in your page. -->
 <nav class="navbar navbar-expand-md bg-dark navbar-dark navbar-custom">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" href="#first"><img src="images/peigne.png" alt="logo" style="width:30px;">First</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#second"><img src="images/tiger.png" alt="logo" style="width:30px;">Second</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#third">Third</a>
-        </li>
-    </ul>
+    <a class="navbar-brand" href="#"><img class="nav-image" src="images/logo.png" alt="logo" style="width:30px;">&nbsp;&nbsp;Chris's
+        Bikes</a>
+    <div class="container">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#meet">Meet Our Experts</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#services">Services and Prices</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#book">Book An Appointment</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact Us</a>
+            </li>
+        </ul>
+    </div>
 </nav>
-<!-- Just arbitrary divisions to see the link from the NavBar -->
-<!-- Also, notice the use of the icon repeated from the menu to add grouping -->
-<div class="container" id="first">
-    <h3><img src="images/peigne.png" alt="logo" style="width:40px;">First Item</h3>
-    <p>Display text 1 </p>
-    <p>Display text 2 </p>
-    <p>Display text 3 </p>
-    <p>Display text 4 </p>
-    <p>Display text 5 </p>
-    <p>Display text 6 </p>
-</div>
 
-<div class="container" id="second">
-    <h3><img src="images/tiger.png" alt="logo" style="width:40px;">Second Item</h3>
-    <p>Display text 1 </p>
-    <p>Display text 2 </p>
-    <p>Display text 3 </p>
-    <p>Display text 4 </p>
-    <p>Display text 5 </p>
-    <p>Display text 6 </p>
-</div>
+<div class="main">
+    <div class="container" id="meet">
+        <h3><img src="images/peigne.png" alt="logo" style="width:40px;">First Item</h3>
+        <p>Display text 1 </p>
+        <p>Display text 2 </p>
+        <p>Display text 3 </p>
+        <p>Display text 4 </p>
+        <p>Display text 5 </p>
+        <p>Display text 6 </p>
+    </div>
 
-<!-- This section contains elements to be validated -->
-<!-- Refer to the JavaScript file, where JQuery is used to listen to those inputs using the ids -->
-<div class="container" id="third">
-    <h3>Third Item</h3>
-    <p>Date: <input type="text" id="dateInput"></p>
-    <p>Phone Number Example <input value="(1234)" type="text" id="phone"></p>
-    <p>Credit Card: <input type="text" id="debit"
-                           title="We ask for your credit card number in case of no-show, 20$ will be charged."></p>
-</div>
+    <div class="container" id="services">
+        <h3><img src="images/tiger.png" alt="logo" style="width:40px;">Second Item</h3>
+        <p>Display text 1 </p>
+        <p>Display text 2 </p>
+        <p>Display text 3 </p>
+        <p>Display text 4 </p>
+        <p>Display text 5 </p>
+        <p>Display text 6 </p>
+    </div>
 
+    <!-- This section contains elements to be validated -->
+    <!-- Refer to the JavaScript file, where JQuery is used to listen to those inputs using the ids -->
+    <div class="container" id="book">
+        <h3>Third Item</h3>
+        <p>Date: <input type="text" id="dateInput"></p>
+        <p>Phone Number Example <input value="(1234)" type="text" id="phone"></p>
+        <p>Credit Card: <input type="text" id="debit"
+                               title="We ask for your credit card number in case of no-show, 20$ will be charged."></p>
+    </div>
+
+    <div class="container" id="contact">
+        <h3>Contact Us</h3>
+        <p>
+            Phone: 555-555-5555
+            <br>
+            Email: contact@chrisbike.ca
+            <br>
+            Visit us in person at
+            <br>
+            186 Vettese Street, Toronto, ON, A1A 2C2
+        </p>
+    </div>
+</div>
+<footer class="text-center">Website designed by Chris Vettese.</footer>
 </body>
 </html>
