Mobile compatibility test

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <!-- As your page is a vertical page (Module 4 requirement), you mus use the navbar -->
 <!-- to just jump to parts of the page. What I put as First/Second/Third here would -->
 <!-- be sections in your page. -->
-<nav class="navbar navbar-expand-md navbar-dark navbar-custom">
+<nav class="navbar navbar-collapse navbar-expand-md navbar-dark navbar-custom">
     <a class="navbar-brand" href="#"><img class="nav-image" src="images/logo.png" alt="logo" style="width:30px;">&nbsp;&nbsp;Chris's
         Bikes</a>
     <div class="container">
