--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <div class="container">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#meet">Meet Our Experts</a>
+                <a class="nav-link" href="#services">Services and Prices</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#services">Services and Prices</a>
+                <a class="nav-link" href="#meet">Meet Our Experts</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#book">Book An Appointment</a>
@@ -62,19 +62,10 @@
     </div>
 </nav>
 <div class="main">
-    <div class="container" id="meet">
-        <h3>Meet Our Experts</h3>
-        <p>Display text 1 </p>
-        <p>Display text 2 </p>
-        <p>Display text 3 </p>
-        <p>Display text 4 </p>
-        <p>Display text 5 </p>
-        <p>Display text 6 </p>
-    </div>
-
+    <h1 class="text-center">Chris's Bike Shop</h1>
     <div class="container" id="services">
         <h3>Services and Prices</h3>
-        <table class="table table-responsive">
+        <table class="table table-responsive bike-table">
             <tbody>
             <tr>
                 <td>
@@ -107,6 +98,57 @@
         </table>
     </div>
     <br>
+    <div class="container" id="meet">
+        <h3>Meet Our Experts</h3>
+        <table class="table table-responsive expert-table">
+            <tbody>
+            <tr>
+                <td>
+                    <img class="bike-image img-fluid" src="images/dio.jpg" alt="logo">
+
+                </td>
+                <td>
+                    <div class="text-center">
+                        <h5>Dio Brando</h5>
+                        <p>
+                            Dio has 10 years of experience repairing bikes. With a focus on road roller bikes,
+                            customers know him for his lightning fast repairs.
+                        </p>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img class="bike-image img-fluid" src="images/josuke.jpg" alt="logo">
+
+                </td>
+                <td>
+                    <div class="text-center">
+                        <h5>Josuke Higashikata</h5>
+                        <p>
+                            Josuke is our newest member of the team, and brings his expertise with repairing mountain bikes.
+                            His unique abilities allow us to offer unbeatable prices on repairs.
+                        </p>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img class="bike-image img-fluid" src="images/levi.jpg" alt="logo">
+                </td>
+                <td>
+                    <div class="text-center">
+                        <h5>Levi Ackerman</h5>
+                        <p>
+                            Levi has been working with omnidirectional bikes for 20 years, and can handle everything from
+                            basic repairs to full tune ups.
+                        </p>
+                    </div>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 
     <div class="container" id="book">
         <h3>Book An Appointment</h3>
