--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 
     <div class="container" id="book">
         <h3>Book An Appointment</h3>
-        <p>Date: <input type="text" id="dateInput"></p>
-        <p>Phone Number Example <input value="(1234)" type="text" id="phone"></p>
+        <p>Date: <label for="dateInput"></label><input type="text" id="dateInput"></p>
+        <p>Phone Number Example <label for="phone"></label><input value="(1234)" type="text" id="phone"></p>
         <p>Credit Card: <input type="text" id="debit"
                                title="We ask for your credit card number in case of no-show, 20$ will be charged."></p>
     </div>
