phone number validation

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <!-- As your page is a vertical page (Module 4 requirement), you mus use the navbar -->
 <!-- to just jump to parts of the page. What I put as First/Second/Third here would -->
 <!-- be sections in your page. -->
-<nav class="navbar navbar-collapse navbar-expand-md navbar-dark navbar-custom">
+<nav class="navbar sticky-top navbar-collapse navbar-expand-md navbar-dark navbar-custom">
     <a class="navbar-brand" href="#"><img class="nav-image" src="images/logo.png" alt="logo" style="width:30px;">&nbsp;&nbsp;Chris's
         Bikes</a>
     <div class="container">
@@ -174,7 +174,7 @@
             <input type="radio" name="radio-button" id="levi">
         </fieldset>
         <p>Date: <label for="dateInput"></label><input type="text" id="dateInput" disabled></p>
-        <p>Phone Number Example <label for="phone"></label><input value="(1234)" type="text" id="phone"></p>
+        <p>Phone Number: <label for="phone"></label><input placeholder="xxx-xxx-xxxx" type="text" id="phone"></p>
         <p>Credit Card: <input type="text" id="debit"
                                title="We ask for your credit card number in case of no-show, 20$ will be charged."></p>
     </div>
