Credit card validation

--- a/index.html
+++ b/index.html
@@ -183,12 +183,13 @@
             Full Name: <label for="full-name"></label>
             <input type="text" id="full-name">
         </p>
-        <p>
-            Credit Card: <input type="text" id="debit"
+        <p id="pay-text">
+            Credit Card: <input type="text" id="debit" placeholder="xxxx xxxx xxxx xxxx"
                                 title="We ask for your credit card number in case of no-show, $5.00 will be charged.">
         </p>
+        <button type="button" class="btn btn-danger" id="book-button">Submit</button>
     </div>
-
+    <br>
     <div class="container" id="contact">
         <h3>Contact Us</h3>
         <p>
