Submit button works

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <input type="text" id="full-name">
         </p>
         <p id="pay-text">
-            Credit Card: <input type="text" id="debit" placeholder="xxxx xxxx xxxx xxxx"
+            Credit/Debit Card: <input type="text" id="debit" placeholder="xxxx xxxx xxxx xxxx"
                                 title="We ask for your credit card number in case of no-show, $5.00 will be charged.">
         </p>
         <button type="button" class="btn btn-danger" id="book-button">Submit</button>
