--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <div class="main">
     <h1 class="text-center">Chris's Bike Shop</h1>
     <div class="container" id="services">
-        <h3>Services and Prices</h3>
+        <h3><img class="icon-image img-fluid" src="images/services.png" alt="Services">Services and Prices</h3>
         <table class="table table-responsive bike-table">
             <tbody>
             <tr>
@@ -104,13 +104,12 @@
     </div>
     <br>
     <div class="container" id="meet">
-        <h3>Meet Our Experts</h3>
+        <h3><img class="icon-image img-fluid" src="images/expert.png" alt="Expert">Meet Our Experts</h3>
         <table class="table table-responsive expert-table">
             <tbody>
             <tr>
                 <td>
                     <img class="bike-image img-fluid" src="images/dio.jpg" alt="Dio">
-
                 </td>
                 <td>
                     <div class="text-center">
@@ -160,7 +159,7 @@
     </div>
 
     <div class="container" id="book">
-        <h3>Book An Appointment</h3>
+        <h3><img class="icon-image img-fluid" src="images/book.jpg" alt="Book">Book An Appointment</h3>
         Select a specialist:
         <fieldset id="select-expert">
             <legend></legend>
@@ -184,6 +183,7 @@
             <input type="text" id="full-name">
         </p>
         <p id="pay-text">
+            <img class="icon-image-small img-fluid" src="images/credit.png" alt="Credot">
             Credit/Debit Card: <input type="text" id="debit" placeholder="xxxx xxxx xxxx xxxx"
                                 title="We ask for your credit card number in case of no-show, $5.00 will be charged.">
         </p>
@@ -191,7 +191,7 @@
     </div>
     <br>
     <div class="container" id="contact">
-        <h3>Contact Us</h3>
+        <h3><img class="icon-image img-fluid" src="images/phone.png" alt="Phone">Contact Us</h3>
         <p>
             Phone: 555-555-5555
             <br>
